dnl Process this file with autoconf to produce a configure script.

AC_INIT(src/tuxkart.cxx)
AM_INIT_AUTOMAKE(tuxkart, 0.4.0)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_INSTALL
AC_PROG_RANLIB

plib_suffix="-lplibjs -lplibsl -lplibssg -lplibpu -lplibfnt -lplibsg -lplibpw -lplibul"

dnl Checks for library functions.
dnl check for OpenGL related libraries

AC_CHECK_HEADER(windows.h, AC_DEFINE(WIN32))

if test "x$ac_cv_header_windows_h" = "xno" ; then

  dnl Check for X11

  AC_PATH_XTRA

  x_suffix="$X_LIBS $X_PRE_LIBS -lpthread -lX11 -lXi -lXext -lXmu $X_EXTRA_LIBS -lm"

  dnl Reasonable stuff non-windoze variants ... :-)

  AC_CHECK_LIB(GL, glNewList,,,$x_suffix)

  if test "x$ac_cv_lib_GL_glNewList" = "xno" ; then
    dnl if no GL, check for MesaGL
    AC_CHECK_LIB(MesaGL, glNewList,,,$x_suffix)
  fi

  opengl_LIBS="$LIBS $x_suffix"

  LIBS="$plib_suffix $LIBS $x_suffix"

else

  dnl CygWin under Windoze.

  LIBS="$plib_suffix $LIBS -lm -lwinmm -lopengl32 -luser32 -lgdi32"

fi



dnl Check SGI audio library

AC_CHECK_LIB(audio, ALopenport)

if test "x$ac_cv_lib_audio_ALopenport" = "xyes" ; then
  dnl this is an SGI machine...
  LIBS="$LIBS -laudio"
fi

dnl Checks for header files.

AC_HEADER_STDC

AC_CHECK_HEADERS(GL/gl.h)
AC_CHECK_HEADER(windows.h, AC_DEFINE(WIN32))
AC_CHECK_HEADER(joystick.h, AC_DEFINE(JOYSTICK_IS_PRESENT))
AC_CHECK_HEADER(linux/joystick.h, AC_DEFINE(LINUX_JOYSTICK_IS_PRESENT))

dnl Check for audio support

AM_CONDITIONAL(ENABLE_AUDIO, \
        test -r /usr/include/soundcard.h \
                -o -r /usr/include/linux/soundcard.h \
                -o -r /usr/include/machine/soundcard.h \
                -o -r /usr/include/audio.h \
                -o "x$ac_cv_header_windows_h" = "xyes" )

AM_CONDITIONAL(ENABLE_IRIX_AUDIO, test -r /usr/include/audio.h)

AM_CONDITIONAL(ENABLE_WIN32_AUDIO, test "x$ac_cv_header_windows_h" = "xyes")

if test "x$ac_cv_header_windows_h" != "xyes" ; then
  if test "x$GXX" != "xyes" ; then
    CFLAGS="$CFLAGS -I/usr/local/include -L/usr/local/lib"
    CXXFLAGS="$CXXFLAGS -I/usr/local/include -L/usr/local/lib"
  else
    CFLAGS="$CFLAGS -O6 -Wall"
    CXXFLAGS="$CXXFLAGS -O6 -Wall"
  fi
else
  CFLAGS="$CFLAGS -O6 -Wall $MACH -malign-double -I/usr/local/include -L/usr/local/lib"
  CXXFLAGS="$CXXFLAGS -O6 -Wall $MACH -malign-double -I/usr/local/include -L/usr/local/lib"
fi

MY_EXPAND_DIR(tuxkart_datadir, "$datadir/games/$PACKAGE")
AC_DEFINE_UNQUOTED(TUXKART_DATADIR, "$tuxkart_datadir")

AC_OUTPUT( Makefile          \
           contrib/Makefile  \
           data/Makefile     \
           doc/Makefile      \
           fonts/Makefile    \
           images/Makefile   \
           models/Makefile   \
           mods/Makefile     \
           src/Makefile      \
           wavs/Makefile     \
          )

