# data/models/

pkgdatadir = $(datadir)/games/$(PACKAGE)/data/models

dist_pkgdata_DATA =  $(shell find $(srcdir) -name "*.b3d") \
                     $(shell find $(srcdir) -name "*.png") \
                     $(shell find $(srcdir) -name "*.jpg") \
                     $(shell find $(srcdir) -name "*.xml") \
                     License.txt

